@@ -3,11 +3,11 @@
 
 //todo remove navbar for index page (not needed)
 
-//todo  sql users table (then do reg and login With sessions)
-
-//todo  login  w/sessions
 
 //todo backgrounds
 
+
+//todo design and make homepage.
+//only able to access it when you have log into the site is working.
 
 
