@@ -1,11 +1,12 @@
 <?php
 /**
  * 
- * @author Luca and barry
+ * @author Eoin and barry
  * @abstract this controller is in charge of...
  * @version 1.0
  */
 include "validationSuite.php";
+include "login_success.php";
 class Controller {
 	private $model;
 	private $action;
@@ -35,10 +36,12 @@ class Controller {
 	}
 
 	public function login(){
-		if (!empty ($_REQUEST ["uname"]) && !empty ($_REQUEST ["password"])){
+		if (!empty ($_REQUEST ["username"]) && !empty ($_REQUEST ["password"])){
 		//send email to validator
 		$_REQUEST ["password"] = md5($_REQUEST ["password"]);
-		$this->model->login($_REQUEST ["uname"], $_REQUEST ["password"]);
+		$this->model->login($_REQUEST ["username"], $_REQUEST ["password"]);
+
+
 	}
 
 	}
@@ -86,8 +89,10 @@ class Controller {
 		$login_success = new login_success();
 		$login_success->login();
 		}
-	public  function sessions(){
 
+	public function sessionslogin($uname){
+		$ses = new Session();
+		$ses->login($uname);
 
 	}
 //	public function defaultActions() {
