@@ -1,0 +1,22 @@
+<?php
+/**
+ * Created by PhpStorm.
+ * User: Barry and Eoin
+ * Date: 10/12/2015
+ * Time: 23:24
+ */
+include("html_headers.php");
+
+?>
+
+<p>You have been logged on:</p>
+
+
+
+
+
+
+<?php
+
+include("html_footers.php");
+?>
