@@ -18,3 +18,6 @@ to include a password instead.
 
 10/12/15 00:29 - Changed the Register(#286090) and Forgot password(#c9302c) buttons colours
 10/12/15 00:32 - Bug fix on the controller.
+10/12/15/23:32 - Login working - Set up sessions. all okay. This was done by having it so that usersDAO called fxn in sessions file.
+10/12/15 23:32 -sessions.php file is in DAO folder. Prob should be a controller. this is  a work arround. In the spirt of MVC , should be called by controller
+
